# pcg64dxsm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.build/bsd-unix/: Makefile  build-macos.sh
.build/linux/: GNUmakefile  mk-docker.sh
.build/windows/: make.cmd
.github/workflows/: ci.yml
benches/: rng_bench.rs
doc/: pcg64dxsm-performance.xlsx
etc/scripts/: bench_mt.cmd  bench_mt.sh  bench_st.cmd  bench_st.sh
resources/: app-aarch64.manifest  app-x86.manifest  app-x86_64.manifest
src/: main.rs
tests/: rng_tests.rs
