[package]
name = "pcg64dxsm"
authors = ["LoRd_MuldeR <mulder2@gmx>"]
description = "Blazing fast random number generator based on Lcg128CmDxsm64 (CM DXSM 128/64 LCG)."
version = "1.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
getrandom = "0.4.2"
hex-literal = "1.1.0"
hkdf = "0.13.0"
parking_lot = "0.12.5"
rand_pcg = "0.10.1"
sha3 = "0.11.0"

[dev-dependencies]
rolling-median = "1.5.5"

[[bench]]
name = "rng_bench"
harness = false
