[package]
name = "pcg64dxsm"
authors = ["LoRd_MuldeR <mulder2@gmx>"]
description = "Blazing fast random number generator based on Lcg128CmDxsm64 (CM DXSM 128/64 LCG)."
version = "1.3.0"
edition = "2024"

[dependencies]
blake2 = "=0.11.0-rc.5"
clap = { version = "4.6.0", features = ["derive"] }
getrandom = "0.4.2"
hex = "0.4.3"
hex-literal = "1.1.0"
parking_lot = "0.12.5"
rand_pcg = "0.10.2"

[dev-dependencies]
rolling-median = "1.5.5"

[build-dependencies]
chrono = "0.4.44"

[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1.12", default-features = false }

[package.metadata.winres]
Comments = "SPDX-License-Identifier: Unlicense"
CompanyName = "LoRd_MuldeR <mulder2@gmx.de>"
FileDescription = "PCG64DXSM command-line application"
InternalName = "pcg64dxsm"
LegalCopyright = "Copyright © 2026 by LoRd_MuldeR <mulder2@gmx.de>"
OriginalFilename = "pcg64dxsm.exe"
ProductName = "Lcg128CmDxsm64 (PCG64DXSM)"

[[bench]]
name = "rng_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
